--- a/index.html
+++ b/index.html
@@ -13,136 +13,42 @@
     <!-- iconos -->
     <link rel="icon" href="/TALLER1/ico/a.jpg">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:700,900" rel="stylesheet">
-
-    <title>AVARGAS</title>
-
+    <!-- iconos redes -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <title>Pagina principal</title>
+    <!-- Fondo -->
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <div class="container">
-      <header class="blog-header py-3">
-        <div class="row flex-nowrap justify-content-between align-items-center">
-          <div class="col-4 pt-1">
-            <a class="text-muted" href="https://twitter.com/___jorge_andres">Suscribirse</a>
-          </div>  
-          <div class="col-4 text-center">
-            <a class="blog-header-logo text-dark" href="https://twitter.com/___jorge_andres">Jorge Andrés Vargas Pérez</a>
-          </div>
-          <div class="col-4 d-flex justify-content-end align-items-center">
-            <a class="text-muted" href="#">
-              <svg= xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mx-3">
-                <circle cx="10.5" cy="10.5" r="7.5"></circle>
-                <line x1="21" y1="21" x2="15.8" y2="15.8"></line>
-              </svg>
-            </a>
-            <a class="btn btn-sm btn-outline-secondary" href="#">Ingresar</a>
-          </div>
+  
+</head>
+  <body class="text-center">
+    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+      <header class="masthead mb-auto">
+        <div class="inner">
+            <h3 class="masthead-brand">Taller 1 SIG WEB</h3>
+        </div>
       </header>
-      <div class="nav-scroller py-1 mb-2">
-        <nav class="nav d-flex justify-content-between">
-          <a class="p-2 text-muted" href="#">Mundo</a>
-          <a class="p-2 text-muted" href="#">Akali</a>
-          <a class="p-2 text-muted" href="#">Ziggs</a>
-          <a class="p-2 text-muted" href="#">Ornn</a>
-          <a class="p-2 text-muted" href="#">Sion</a>
-          <a class="p-2 text-muted" href="#">Blitz</a>
-          <a class="p-2 text-muted" href="#">Thresh</a>
-        </nav>
-      </div>
-      <div class="jumbotron p-3 p-md-5 text-white rounded bg-success">
-        <div class="col-md px-0">
-          <h1 class="display-4 font-italic"> Jorge Andrés Vargas</h1>
-          <p class="lead my-3"> "Aqui va un pequeño resumen" </p>
-        </div>
-      </div>
-      <div class="album py-5 bg-light">
+      <hr class="featurette-divider">
+      <main role="main" class="inner cover">
+        <h1 class="cover-heading"> Jorge Andrés Vargas Pérez </h1>
         <div class="container">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="card mb-4 box-shadow">
-                <img class="card-img-top" data-src="img/perfil.jpg" alt="Thumbnail [100%x255]" style="height:255px; width:100%; display: block;" src="img/perfil.jpg" data-holder-rendered="true">
-
-              </div>
-            </div>
-          </div>
+            <img class="mx-auto d-block rounded-circle" src="img/indexperfil2.JPG" width="300" height="300" >
         </div>
-      </div>
-      <!-- Acordion -->
-      <div class="accordion accordion-flush" id="acordion">
-        <!-- Acordion item 1-->
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-tarjet="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-              Titulo del item 1
-            </button>
-          </h2>
-          <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#acordion">
-            <div class="accordion-body">
-              <strong>Primer item</strong>Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+        <p class="lead">
+            En este sitio WEB usted va a encontrar informacion autobiografica
+        </p>
+        <p class="lead">
+            <a href="principal.html" class="btn btn-lg btn-success"> Ingresar</a>
+        </p>
+      </main>
+      <!-- footer -->
+    <footer class="mastfoot mt-auto text-white text-center">
+        <div class="inner">
+            <h6>Sígueme en redes sociales:</h6>
+            <a href="https://www.facebook.com/J.andres.vargas.perez" target="_blank" class="text-white mr-3"><i class="fab fa-facebook fs-3"></i></a>
+            <a href="https://twitter.com/___jorge_andres" target="_blank" class="text-white mr-3"><i class="fab fa-twitter fs-3"></i></a>
+            <a href="https://www.instagram.com/___andres_vargas/" target="_blank" class="text-white"><i class="fab fa-instagram fs-3"></i></a>
           </div>
-        </div>
-          <!-- Acordion item 2-->
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-tarjet="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-              Titulo del item 2
-            </button>
-          </h2>
-          <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#acordion">
-            <div class="accordion-body">Aqui va un texto donde esa vaina se abre xdd</div>
-          </div>
-        </div>
-          <!-- Acordion item 3-->
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-tarjet="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-              Titulo del item 3
-            </button>
-          </h2>
-          <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#acordion">
-            <div class="accordion-body">Aqui va un texto donde esa vaina se abre xdd</div>
-          </div>
-        </div>
-      </div>
-      <!-- Carousel -->
-      <div  id="myCarousel" class="carousel slide" data-bs-ride="carousel">
-        <!-- Indicatoress/-->
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></button>
-          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1"></button>
-          <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2"></button>
-        </div>
-      
-      <!-- Slideshow/carousel -->
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img/perfil2.jpg" alt="Imagen1" class="d-block" style="width:100%">
-          </div>
-          <div class="carousel-item">
-            <img src="img/perfil.jpg" alt="Imagen2" class="d-block" style="width:100%">
-          </div>
-          <div class="carousel-item">
-            <img src="img/perfil3.jpg" alt="Imagen3" class="d-block" style="width:100%">
-          </div>
-        </div>
-      <!-- controles/iconos de desplazamiento-->
-        <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon"></span>
-        </button>
-    </div>
-    </div>
-    
-    <footer class="container">
-      <p class="float-tight">
-        <a href="#">Volver al inicio</a>
-      </p>
-      <p>"Universidad del Valle Cali, Colombia
-        <a href="#"> Privacidad </a>
-        <a href="#"> Terminos </a>
-      </p>
-    </footer>
-  </body>
+      </footer>  
+    </body>
 </html>
