--- a/academica.html
+++ b/academica.html
@@ -54,11 +54,9 @@
                       <!-- MENUS -->
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Presentación</a>
+                            <a class="nav-link active" aria-current="page" href="principal.html">Página principal</a>
                         </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Salir</a>
-                    </li>
+                    
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Información
@@ -69,6 +67,9 @@
                             <li><a class="dropdown-item" href="academica.html">Informacion Academica</a></li>
                             <li><a class="dropdown-item" href="expectativas.html">Expectativas</a></li>
                         </ul>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">Salir</a>
                     </li>
                   </ul>
                 </div>
