--- a/principal.html
+++ b/principal.html
@@ -25,7 +25,7 @@
       <header>
         <nav class="navbar bg-body-tertiary fixed-top">
             <div class="container-fluid">
-                <span class="badge bg-secondary">PRESENTACIÓN</span>
+                <span class="badge bg-secondary">PÁGINA PRINCIPAL</span>
                 <a class="navbar-brand">Jorge Andrés Vargas Pérez</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -54,11 +54,9 @@
                       <!-- MENUS -->
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Presentación</a>
+                            <a class="nav-link active" aria-current="page" href="principal.html">Página principal</a>
                         </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Salir</a>
-                    </li>
+                    
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Información
@@ -69,6 +67,9 @@
                             <li><a class="dropdown-item" href="academica.html">Informacion Academica</a></li>
                             <li><a class="dropdown-item" href="expectativas.html">Expectativas</a></li>
                         </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Salir</a>
                     </li>
                   </ul>
                 </div>
@@ -81,13 +82,11 @@
         <hr class="featurette-divider">
           <!-- Una pequeña presentacion -->
         <div class="container">
-
-        
           <div class="row featurette">
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading">
-                Presentación
-                <span class="text-muted"> Inicial</span>
+                Página 
+                <span class="text-muted"> Principal</span>
               </h2>
               <p class="lead">
                 "Esta esuna prueba acá va un textico marica"
@@ -116,8 +115,8 @@
                                 </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary"> Abrir </button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary"> otroboton </button>
+                                        <a href="personal.html" button type="button"  class="btn btn-sm btn-outline-secondary"> Abrir </a>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="popover" title="Información personal" data-bs-content="Esta pagina contiene informacion del entorno personal y familiar">?</button>
                                     </div>
                                 </div>
                             </div>
@@ -135,8 +134,8 @@
                                     </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary"> Abrir </button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary"> otroboton </button>
+                                        <a href="academica.html" type="button" class="btn btn-sm btn-outline-secondary"> Abrir </a>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="popover" title="Información Academica" data-bs-content="Esta pagina contiene información de estudios realizados">?</button>
                                     </div>
 
                                 </div>
@@ -156,8 +155,8 @@
                                 </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary"> Abrir </button>
-                                        <button type="button" class="btn btn-sm btn-outline-secondary"> otroboton </button>
+                                        <a href="expectativas.html" type="button" class="btn btn-sm btn-outline-secondary"> Abrir </a>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary" data-bs-toggle="popover" title="Expectativas" data-bs-content="Esta pagina contiene información de expectativas, proyecciones y enfoques academicos">?</button>
                                     </div>
                                 </div>
                             </div>
@@ -191,5 +190,11 @@
         </div>
       </footer>
       <br>
+      <script>
+        var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+        var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+          return new bootstrap.Popover(popoverTriggerEl)
+        })
+        </script>
     </body>
 </html>
