--- a/index.html
+++ b/index.html
@@ -50,5 +50,6 @@
             <a href="https://www.instagram.com/___andres_vargas/" target="_blank" class="text-white"><i class="fab fa-instagram fs-3"></i></a>
           </div>
     </footer>  
+    </div>
     </body>
 </html>
