--- a/academica.html
+++ b/academica.html
@@ -78,6 +78,133 @@
           </nav>
         </header>
         <br>
+        <hr class="featurette-divider">
+        <br>
+        <br>
+        <!-- Acá va la parte inicial -->
+        <section class="jumbotron text-center">
+            <div class="container" style="background-image: url('img/bike.jpg');">
+              <br>
+              <img class="mx-auto d-block img-thumbnail" src="img/indexperfil2.JPG" width="300" height="300" >
+              <h2>Informacion Academica</h2>
+              <p class="fw-light"> Acá va otro textico raro referente a la experiencia academica y esas cosas </p>
+            </div>
+        </section>
+        <div class="container">
+          <div class="text-center">
+            <hr class="featurette-divider">
+            <h2 class="text-center">Informacion Academica</h2>
+            <p class="fw-light"> Acá va otro textico raro referente a la experiencia academica y esas cosas </p>
+          </div>
+          <br>
+          <!-- Acá van las tarjetas con imagen circular -->
+          <div class="container marketing text-center">
+            <div class="row">
+                <!-- Columna 1 -->
+                <div class="col-lg-4">
+                  <img class="rounded-circle" src="img/indexperfil2.JPG" width="250" height="250" >
+                  <h2>Heading</h2>
+                  <p style="text-align: justify">
+                    También se pueden especificar otras propiedades CSS para controlar la posición, repetición y tamaño de la imagen de fondo. Por ejemplo
+                  </p>
+                </div>
+                <!-- Columna 2 -->
+                <div class="col-lg-4">
+                  <img class="rounded-circle" src="img/indexperfil2.JPG" width="250" height="250" >
+                  <h2>Heading</h2>
+                  <p>
+                    Informacion Personal
+                  </p>
+                </div>
+                <!-- Columna 3 -->
+                <div class="col-lg-4">
+                  <img class="rounded-circle" src="img/indexperfil2.JPG" width="250" height="250" >
+                  <h2>Heading</h2>
+                  <p>
+                    Informacion Personal
+                  </p>
+                </div>
+            </div>
+            <hr class="featurette-divider">
+        </div>
+          <!-- Cuadro 1 imagen izquierda -->
+          <div class="row featurette">
+            <div class="col-md-7 order-md-2">
+              <h2 class="featurette-heading">
+                "Esta prueba"
+                <span class="text-muted"> vamo a ver</span>
+              </h2>
+              <p class="lead">
+                "Esta esuna prueba acá va un textico marica"
+              </p>
+            </div>
+            <div class="col-md-5 order-md-1">
+              <img class="img-thumbnail" src="img/bike.jpg">
+            </div>
+          </div>
+          <br>
+            <hr class="featurette-divider">
+          <br>
+          <!-- Cuadro 2 imagen derecha -->
+          <div class="row featurette">
+            <div class="col-md-5 order-md-2">
+              <img class="img-thumbnail" src="img/bike.jpg">
+            </div>
+            <div class="col-md-7 order-md-1">
+              <h2 class="featurette-heading">
+                "Esta prueba"
+                <span class="text-muted"> vamo a ver</span>
+              </h2>
+              <p class="lead">
+                "Esta esuna prueba acá va un textico marica"
+              </p>
+            </div>
+          </div>
+          <br>
+            <hr class="featurette-divider">
+          <br>
+          <!-- Cuadro 3 imagen izquierda -->
+          <div class="row featurette">
+            <div class="col-md-7 order-md-2">
+              <h2 class="featurette-heading">
+                "Esta prueba"
+                <span class="text-muted"> vamo a ver</span>
+              </h2>
+              <p class="lead">
+                "Esta esuna prueba acá va un textico marica"
+              </p>
+            </div>
+            <div class="col-md-5 order-md-1">
+              <img class="img-thumbnail" src="img/bike.jpg">
+            </div>
+          </div>
+          <br>
+            <hr class="featurette-divider">
+          <br>
+          <!-- Cuadro 4 imagen derecha -->
+          <div class="row featurette">
+            <div class="col-md-5 order-md-2">
+              <img class="img-thumbnail rounded" src="img/bike.jpg">
+            </div>
+            <div class="col-md-7 order-md-1">
+              <h2 class="featurette-heading">
+                "Esta prueba"
+                <span class="text-muted"> vamo a ver</span>
+              </h2>
+              <p class="lead" style="text-align: justify">
+                La etiqueta role="main" se utiliza para indicar que el contenido de una sección específica de una página web es el contenido principal o primario de esa sección. Esto es importante para la accesibilidad web, ya que permite a los usuarios de lectores de pantalla o navegadores web que utilizan la navegación por teclado comprender mejor la estructura de la página. Además, algunos motores de búsqueda también utilizan esta información para entender mejor el contenido y mejorar la clasificación de la página en los resultados de búsqueda.
+              </p>
+            </div>
+          </div>
+          <br>
+            <hr class="featurette-divider">
+          <br>
+
+
+        </div>
+        
+        <br>
+        <hr class="featurette-divider">
         <br>
         
     <!-- footer -->
