--- a/principal.html
+++ b/principal.html
@@ -88,8 +88,8 @@
                 Página 
                 <span class="text-muted"> Principal</span>
               </h2>
-              <p class="lead">
-                "Esta esuna prueba acá va un textico marica"
+              <p class="lead" style="text-align: justify">
+                Mi nombre es Jorge Andrés Vargas Pérez tengo 25 años de edad, actualmente soy estudiante de ingenieria topografica, ........ A continuacion encontrará diferentes enlaces a informacion mia. 
               </p>
             </div>
             <div class="col-md-5 order-md-1">
@@ -107,7 +107,7 @@
                         <div class="card mb-4 box shadow">
                             <br>
                             <div class="container">
-                                <img class="mx-auto d-block rounded" src="img/indexperfil2.JPG" width="250" height="250" >
+                                <img class="img-fluid mx-auto d-block rounded" src="img/perfil2.JPG" width="270" height="270" >
                             </div>
                             <div class="card-body">
                                 <p class="card-text">
@@ -126,7 +126,7 @@
                         <div class="card mb-4 box shadow">
                             <br>
                             <div class="container">
-                                <img class="mx-auto d-block rounded" src="img/indexperfil2.JPG" width="250" height="250" >
+                                <img class="img-fluid  mx-auto d-block rounded" src="img/princacademic.JPG" width="270" height="270" >
                             </div>
                                 <div class="card-body">
                                     <p class="card-text">
@@ -147,7 +147,7 @@
                         <div class="card mb-4 box shadow">
                             <br>
                             <div class="container">
-                                <img class="mx-auto d-block rounded" src="img/indexperfil2.JPG" width="250" height="250" >
+                                <img class="img-fluid  mx-auto d-block rounded" src="img/drone.JPG" width="270" height="270" >
                             </div>
                             <div class="card-body">
                                 <p class="card-text">
@@ -184,7 +184,6 @@
               <a href="https://www.facebook.com/J.andres.vargas.perez" target="_blank" class="text-white mr-3"><i class="fab fa-facebook fs-1"></i></a>
               <a href="https://twitter.com/___jorge_andres" target="_blank" class="text-white mr-3"><i class="fab fa-twitter fs-1"></i></a>
               <a href="https://www.instagram.com/___andres_vargas/" target="_blank" class="text-white"><i class="fab fa-instagram fs-1"></i></a>
-              <a href="prueba2.html" target="_blank" class="text-white">Pruebaotra</a>
             </div>
           </div>
         </div>
