--- a/personal.html
+++ b/personal.html
@@ -91,10 +91,10 @@
 
 
 <!-- Carousel -->
-      <div class="container">
+      <div class="container font-italic">
           <!-- Una pequeña presentacion -->
         <div class="container">
-          <div class="jumbotron p-3 p-md-5 text-white rounded bg-secondary">
+          <div class="jumbotron p-3 p-md-5 text-dark rounded bg-secondary" style="background-image: url('img/princfondo.JPG'); background-size: cover;">
             <div class="row featurette">
               <div class="col-md-7 px-0">
                 <h3 class="display-5 font-italic">
@@ -140,6 +140,34 @@
                   <td>Lugar de nacimiento</td>
                   <td>Gámeza - Boyacá</td>
                 </tr>
+                <tr>
+                  <td>Documento de identidad</td>
+                  <td>1002534547</td>
+                </tr>
+                <tr>
+                  <td>Estado civil</td>
+                  <td>Soltero</td>
+                </tr>
+                <tr>
+                  <td>Dirección de domicilio</td>
+                  <td>Carrera 85a No. 48 - 19</td>
+                </tr>
+                <tr>
+                  <td>Barrio</td>
+                  <td>El Caney</td>
+                </tr>
+                <tr>
+                  <td>Ciudad</td>
+                  <td>Cali-Colombia</td>
+                </tr>
+                <tr>
+                  <td>Telefono</td>
+                  <td>318 463 0715</td>
+                </tr>
+                <tr>
+                  <td>Correo electronico</td>
+                  <td>jorge.andres.vargas@correounivalle.edu.co</td>
+                </tr>
               </tbody>
             </table>
           </div>
@@ -151,27 +179,28 @@
               <div class="col-md-8 blog-main">
                 <h3 class="pb-3 mb-4 font-italic border-bottom"> Biografía</h3>
                 <div class="blog-post">
-                  <h2 class="blog-post-title"> Texto 1</h2>
-                  <p class="blog-post-meta">
-                    Texto chiquito
-                  </p>
-                  <p> Acá va un texto más grande</p>
-                  <hr>
+                  <h4 class="blog-post-title"> Inicios </h4>
+                  <p style="text-align: justify"> Mi nombre es Jorge Andrés Vargas Pérez, tengo 25 años, nací el 11 de mayo de 1997 en el municipio de Gámeza en el departamento de Boyacá, soy bachiller tecnico en sistemas, tengo un tecnologo en topografía del SENA Centro Minero actualmente me encuentro estudiando Ingenieria Topografica en la Universidad del Valle (Cali-Colombia)</p>
+                  <br>
                   <p>Otro parrafo</p>
-                  <blockquote>
-                    <p> Otro texto más</p>
-                  </blockquote>
-                  <p> Acá más texto</p>
-                  <h2> Otro titulo</h2>
-                  <p> Acá va más texto depende de lo que quiera poner </p>
+                  <h4 class="font-italic">Estudios primarios</h4>
+                  <p style="text-align: justify"> Inicié mis estudios en el año de , en la Institución educativa Tecnico Industrial Gustavo Jimenez sede San José el porvenir en la ciudad de Sogamoso</p>
+                  <div class="container">
+                    <img src="img/escuela.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:60%">
+                  </div>
+                  <h4> Bachillerato </h4>
+                  <p> En el año 2009, a la edad de 11 años inicié el bachillerato en la IETI Gustavo Jimenez sede central, en general me destaqué por ocupar los primeros puestos en cada uno de los grados cursados</p>
+                  <div class="container">
+                    <img src="img/escuela.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:60%">
+                  </div>
+                  <br>
                 </div>
               </div>
               <aside class="col-md-4 blog-sidebar">
-                <div class="p-3 mb-3 bg-light rounded">
-                  <h4 class="font-italic">Acerca de </h4>
-                  <p class="mb-0">
-                    Acá se pone un texto ahi xd
-                  </p>
+                <br>
+                <div class="p-3 mb-3 bg-dark rounded" style="border:2px solid rgb(100, 97, 97);">
+                  <img class="mx-auto d-block rounded" src="img/indexperfil2.JPG" width="250" height="250" >
+                  <br>
                 </div>
                 <div class="p-3">
                   <h4 class="font-italic">Otra información</h4>
@@ -207,16 +236,14 @@
                 <div class="row featurette">
                   <div class="col-md-7 order-md-2">
                     <h2 class="featurette-heading">
-                      "Expectativas"
-                      <span class="text-muted"> vamo a ver</span>
+                      <span class="text-muted"> Ciclismo </span>
                     </h2>
-                    <p class="lead">
-                      Acá van las expectativas academicas
+                    <p class="lead" style="text-align: justify">
+                      Practico el ciclismo de manera recreativa desde el año 2016, inicié con el ciclismo de montaña, un año despues comencé a practicar ciclismo de ruta de manera recreativa, el ciclismo meha ayudado para mantener un estilo de vida saludable, conocer lugares nuevos y personas nuevas, además de que es un medio de transporte economico y util en situaciones de embotellamientos. En la imagen se observa la bicicleta que utilizo para salir a pedalear.
                     </p>
                   </div>
                   <div class="col-md-5 order-md-1">
                       <video src="img/bikeblack.MOV" autoplay type="video/MOV"  width="400" height="400" controls>
-                        Tu navegador no soporta el elemento video.
                       </video>
                   </div>
                 </div>
@@ -226,7 +253,7 @@
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                Expectativas laborales
+                Baloncesto
               </button>
             </h2>
             <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -234,15 +261,14 @@
                 <div class="row featurette">
                   <div class="col-md-7 order-md-2">
                     <h2 class="featurette-heading">
-                      "Expectativas"
-                      <span class="text-muted"> vamo a ver</span>
+                      Baloncesto
                     </h2>
-                    <p class="lead">
-                      Acá van las expectativas academicas
+                    <p class="lead" style="text-align: justify">
+                      Este deporte me ha gustado desde que tenía aproximadamente 14 años, aunque actualmente no lo practico con mucha frecuencia, es un deporte que me ha servido para conocer nuevas personas, además de que es un deporte que ayuda a tener un estilo de vida saludable.
                     </p>
                   </div>
                   <div class="col-md-5 order-md-1">
-                    <img class="img-thumbnail" src="img/bike.jpg" width="300" height="300">
+                    <img class="img-thumbnail" src="img/carpersonal2.jpg" width="300" height="300">
                   </div>
                 </div>
               </div>
@@ -251,7 +277,7 @@
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                Linea de investigación
+                Videojuegos
               </button>
             </h2>
             <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
@@ -259,43 +285,17 @@
                 <div class="row featurette">
                   <div class="col-md-7 order-md-2">
                     <h2 class="featurette-heading">
-                      "Expectativas"
-                      <span class="text-muted"> vamo a ver</span>
+                      Videojuegos
                     </h2>
-                    <p class="lead">
-                      Acá van las expectativas academicas
+                    <p class="lead" style="text-align: justify">
+                      Los videojuegos son un pasatiempo que disfruto ya que me permite de cierta manera compartir con personas que se encuentran lejos gracias a los juegos en linea. 
                     </p>
                   </div>
                   <div class="col-md-5 order-md-1">
-                    <img class="img-thumbnail" src="img/bike.jpg" width="300" height="300">
+                    <video src="img/games.mp4" autoplay type="video/mp4"  width="400" height="400" controls></video>
                   </div>
                 </div>
             
-              </div>
-            </div>
-          </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                Motivación
-              </button>
-            </h2>
-            <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-              <div class="accordion-body">
-                <div class="row featurette">
-                  <div class="col-md-7 order-md-2">
-                    <h2 class="featurette-heading">
-                      "Expectativas"
-                      <span class="text-muted"> vamo a ver</span>
-                    </h2>
-                    <p class="lead">
-                      Acá van las expectativas academicas
-                    </p>
-                  </div>
-                  <div class="col-md-5 order-md-1">
-                    <img class="img-thumbnail" src="img/bike.jpg" width="300" height="300">
-                  </div>
-                </div>
               </div>
             </div>
           </div>
@@ -306,36 +306,52 @@
         <!-- Acá va el carousel que es donde cambian las imagenes-->
         <div class="container">
           <h2>Imagenes</h2>
-          <p>A continuación se presentan algunas imagenes</p> 
+          <p>A continuación se presentan algunas imagenes referentes a mi vida personal.</p> 
           <div  id="myCarousel" class="carousel slide" data-bs-ride="carousel">
         <!-- Indicatoress/-->
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></button>
               <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1"></button>
               <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2"></button>
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3"></button>
+              <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="4"></button>
             </div>
       
       <!-- Slideshow/carousel -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/perfil2.jpg" alt="Imagen1" class="mx-auto d-block rounded" style="width:90%">
+                <img src="img/carpersonal1.jpg" alt="Imagen1" class="mx-auto d-block rounded" style="width:45%">
                 <div class="carousel-caption">
-                  <h3>Primera Imagen</h3>
-                  <p>Aca un pequeño resumen maybe</p>
+                  <h3>Ciclismo</h3>
+                  <br>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/bike.jpg" alt="Imagen2" class="mx-auto d-block rounded" style="width:90%">
+                <img src="img/carpersonal3.JPG" alt="Imagen2" class="mx-auto d-block rounded" style="width:45%">
                 <div class="carousel-caption">
-                  <h3>Segunda Imagen</h3>
-                  <p>Aca un pequeño resumen maybe</p>
+                  <h3>Gato</h3>
+                  <br>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/perfil3.jpg" alt="Imagen3" class="mx-auto d-block rounded" style="width:90%">
+                <img src="img/perfil3.jpg" alt="Imagen3" class="mx-auto d-block rounded" style="width:45%">
                 <div class="carousel-caption">
                   <h3>Tercera Imagen</h3>
-                  <p>Aca un pequeño resumen maybe</p>
+                  <br>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/perfil3.jpg" alt="Imagen4" class="mx-auto d-block rounded" style="width:45%">
+                <div class="carousel-caption">
+                  <h3>Cuarta Imagen</h3>
+                  <br>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/perfil3.jpg" alt="Imagen5" class="mx-auto d-block rounded" style="width:45%">
+                <div class="carousel-caption">
+                  <h3>Quinta Imagen</h3>
+                  <br>
                 </div>
               </div>
             </div>
@@ -359,7 +375,7 @@
               <span class="text-muted"> ubicaciónes</span>
             </h2>
             <p class="lead" style="text-align: justify">
-              Ten en cuenta que si la página utiliza algún tipo de código generado dinámicamente (como PHP), es posible que no puedas ver todo el código fuente desde el navegador. En ese caso, puedes acceder al archivo PHP correspondiente en el servidor donde está alojado tu sitio WordPress y ver su contenido.
+              El mapa que aquí se presenta contiene informacion puntual de algunas ubicaciones como lo son lugar de nacimiento, ubicación actual y el lugar donde he pasado la mayor parte de mi vida. 
             </p>
           </div>
           <div class="col-md-7 order-md-1">
