--- a/personal.html
+++ b/personal.html
@@ -98,15 +98,17 @@
             <div class="row featurette">
               <div class="col-md-7 px-0">
                 <h3 class="display-5 font-italic">
-                  Expectativas
-                  <span class="text-muted"> vamo a ver</span>
+                  <strong>Presentación</strong> 
+                  <span class="text-muted"><strong>inicial</strong></span>
                 </h3>
                 <p class="lead" style="text-align: justify">
-                  En resumen, es un párrafo que se destacará visualmente del resto del texto, y que tendrá un espacio adicional tanto en la parte superior como en la inferior del párrafo para separarlo del contenido circundante.
+                  <strong>
+                    Mi nombre es Jorge Andrés Vargas Pérez tengo 25 años, actualmente me encuentro estudiando Ingenieria Topografica en la Universidad del Valle (Cali-Colombia). Soy una persona responsable, respetuoso y con iniciativo, me caracterizo por ser una persona con enfoque, cuando me trazo una meta hago todo lo posible por cumplirla, me gusta asumir retos, con facilidad para trabajar en equipo, me gusta realizar los trabajos que se me asignan de la mejor manera posible, soy una persona que quiere aprender cada día cosas nuevas y afianzar mis conocimientos, con el objetivo de crecer cada día como persona y como profesional.
+                  </strong>
                 </p>
               </div>
-              <div class="col-md-4 order-md-1">
-                <img class="img-thumbnail" src="img/personalperf.JPG" width="300" height="300">
+              <div class="col-md-4 order-md-1 mx-auto ">
+                <img class="img-thumbnail text-center" src="img/personalperf.JPG" width="300" height="300">
               </div>
             </div>
           </div>
@@ -115,7 +117,7 @@
           <br>
           <div class="container">
             <h2>Datos personales</h2>
-            <p>A continuación se presentan mis datos personales</p>            
+            <p>A continuación se presentan mis datos personales que pueden ser de utilidad</p>            
             <table class="table table-bordered table-dark table-striped">
               <thead>
                 <tr>
@@ -180,16 +182,23 @@
                 <h3 class="pb-3 mb-4 font-italic border-bottom"> Biografía</h3>
                 <div class="blog-post">
                   <h4 class="blog-post-title"> Inicios </h4>
-                  <p style="text-align: justify"> Mi nombre es Jorge Andrés Vargas Pérez, tengo 25 años, nací el 11 de mayo de 1997 en el municipio de Gámeza en el departamento de Boyacá, soy bachiller tecnico en sistemas, tengo un tecnologo en topografía del SENA Centro Minero actualmente me encuentro estudiando Ingenieria Topografica en la Universidad del Valle (Cali-Colombia)</p>
+                  <p style="text-align: justify"> Mi nombre es Jorge Andrés Vargas Pérez, nací el 11 de mayo de 1997 en el municipio de Gámeza en el departamento de Boyacá, mis padres son Maria Nelfy Pérez Rodriguez y Eugenio Vargas Cristancho, soy el menor de 4 hermanos siendo Flor Maria la mayor, Israel Antonio el que le sigue, Yeny Rocio quien le sigue y mi persona el menor. Soy bachiller tecnico en sistemas, tengo un tecnologo en topografía del SENA Centro Minero actualmente me encuentro estudiando Ingenieria Topografica en la Universidad del Valle (Cali-Colombia). Responsable, respetuoso y con iniciativo, me caracterizo por ser una persona con enfoque que cuando me trazo una meta hago todo lo posible por cumplirla, me gusta asumir retos, con facilidad para trabajar en equipo, me gusta realizar los trabajos que se me asignan de la mejor manera posible, soy una persona que quiere aprender cada día cosas nuevas y afianzar mis conocimientos, con el objetivo de crecer cada día como persona y como profesional.</p>
                   <br>
-                  <p>Otro parrafo</p>
+                  <p style="text-align: justify">Como mencioné anteriormente, nací en el municipio de Gamezá (Boyacá), sin embargo al poco tiempo de nacer, con mi familia nos mudamos al municipio de Sogamoso (Boyacá) en busqueda de nuevas oportunidades y una mejor vida, en este municipio he vivido la mayor parte de mi vida.</p>
+                  <br>
                   <h4 class="font-italic">Estudios primarios</h4>
-                  <p style="text-align: justify"> Inicié mis estudios en el año de , en la Institución educativa Tecnico Industrial Gustavo Jimenez sede San José el porvenir en la ciudad de Sogamoso</p>
+                  <p style="text-align: justify"> Inicié mis estudios en el año de 2003, en la Institución educativa Tecnico Industrial Gustavo Jimenez sede San José el porvenir en la ciudad de Sogamoso donde cursé mis estudios primarios (Preescolar - Grado quinto).</p>
                   <div class="container">
                     <img src="img/escuela.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:60%">
                   </div>
                   <h4> Bachillerato </h4>
-                  <p> En el año 2009, a la edad de 11 años inicié el bachillerato en la IETI Gustavo Jimenez sede central, en general me destaqué por ocupar los primeros puestos en cada uno de los grados cursados</p>
+                  <p style="text-align: justify">  En el año 2009, a la edad de 11 años inicié el bachillerato en la IETI Gustavo Jimenez sede central, al ser un colegio Tecnico Industrial, es una institucion que tiene enfoques en diferentes talleres que tienen aplicabilidad en la industria como lo son: Dibujo Tecnico, Mecanica Automotriz, Mecanica Industrial, Electricidad, Metalisteria y Soldadura, Fundicion y por ultimo sistemas. Personalmente yo me enfoqué en el area de Sistemas donde aprendí conceptos basicos de lo que son las redes informaticas, manejo de bases de datos, principios de programacion y fue en este taller donde tuve mis primeros acercamientos a AutoCAD. Finalmente, obtuve el titulo de Bachiller Tecnico en Sistemas en Diciembre del año 2014. En general me destaqué academicamente por mi buen rendimiento en las diferentes materias.</p>
+                  <div class="container">
+                    <img src="img/escuela.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:60%">
+                  </div>
+                  <br>
+                  <h4> Tecnologo</h4>
+                  <p>  </p>
                   <div class="container">
                     <img src="img/escuela.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:60%">
                   </div>
@@ -321,35 +330,35 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img src="img/carpersonal1.jpg" alt="Imagen1" class="mx-auto d-block rounded" style="width:45%">
-                <div class="carousel-caption">
-                  <h3>Ciclismo</h3>
+                <div class="carousel-caption text-muted">
+                  <h3 >Ciclismo</h3>
                   <br>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/carpersonal3.JPG" alt="Imagen2" class="mx-auto d-block rounded" style="width:45%">
-                <div class="carousel-caption">
+                <div class="carousel-caption text-muted">
                   <h3>Gato</h3>
                   <br>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/perfil3.jpg" alt="Imagen3" class="mx-auto d-block rounded" style="width:45%">
-                <div class="carousel-caption">
+                <div class="carousel-caption text-muted">
                   <h3>Tercera Imagen</h3>
                   <br>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/perfil3.jpg" alt="Imagen4" class="mx-auto d-block rounded" style="width:45%">
-                <div class="carousel-caption">
+                <div class="carousel-caption text-muted">
                   <h3>Cuarta Imagen</h3>
                   <br>
                 </div>
               </div>
               <div class="carousel-item">
                 <img src="img/perfil3.jpg" alt="Imagen5" class="mx-auto d-block rounded" style="width:45%">
-                <div class="carousel-caption">
+                <div class="carousel-caption text-muted">
                   <h3>Quinta Imagen</h3>
                   <br>
                 </div>
@@ -375,7 +384,8 @@
               <span class="text-muted"> ubicaciónes</span>
             </h2>
             <p class="lead" style="text-align: justify">
-              El mapa que aquí se presenta contiene informacion puntual de algunas ubicaciones como lo son lugar de nacimiento, ubicación actual y el lugar donde he pasado la mayor parte de mi vida. 
+              <br>
+              El mapa que aquí se presenta contiene informacion puntual de algunas ubicaciones que ya se mencionaron anteriormente como lo son lugar de nacimiento, ubicación actual y el lugar donde he pasado la mayor parte de mi vida que es el lugar donde vive mi familia, este mapa se realizó con el fin de mostrar de cierta manera dar un contexto espacial a algunas ubicaciones en las cuales he pasado una parte considerable de mi vida. 
             </p>
           </div>
           <div class="col-md-7 order-md-1">
