--- a/expectativas.html
+++ b/expectativas.html
@@ -109,12 +109,12 @@
                     "Expectativas"
                     <span class="text-muted"> vamo a ver</span>
                   </h2>
-                  <p class="lead">
+                  <p class="lead" style="text-align: justify">
                     Acá van las expectativas academicas
                   </p>
                 </div>
                 <div class="col-md-5 order-md-1">
-                  <img class="img-thumbnail" src="img/bike.jpg" width="300" height="300">
+                  <img class="img-thumbnail" src="img/bike.jpg" width="400" height="400">
                 </div>
               </div>
             </div>
@@ -134,12 +134,12 @@
                     "Expectativas"
                     <span class="text-muted"> vamo a ver</span>
                   </h2>
-                  <p class="lead">
+                  <p class="lead" style="text-align: justify">
                     Acá van las expectativas academicas
                   </p>
                 </div>
                 <div class="col-md-5 order-md-1">
-                  <img class="img-thumbnail" src="img/bike.jpg" width="300" height="300">
+                  <img class="img-thumbnail" src="img/bike.jpg" width="400" height="400">
                 </div>
               </div>
             </div>
@@ -156,15 +156,18 @@
               <div class="row featurette">
                 <div class="col-md-7 order-md-2">
                   <h2 class="featurette-heading">
-                    "Expectativas"
-                    <span class="text-muted"> vamo a ver</span>
+                    Linea
+                    <span class="text-muted"> de investigación </span>
                   </h2>
-                  <p class="lead">
-                    Acá van las expectativas academicas
+                  <p class="lead" style="text-align: justify">
+                    Esta linea de investigación de la ingeniería topográfica es la que más me interesa debido a que considero que tiene una alta proyección laboral a futuro ya que el uso de sensores remotos para monitoreo de variables ambientales y otro tipo de variables serán de gran aplicabilidad eventualmente. 
                   </p>
                 </div>
-                <div class="col-md-5 order-md-1">
-                  <img class="img-thumbnail" src="img/bike.jpg" width="300" height="300">
+                <div class="col-md-5 order-md-1 text-center">
+                  <a href="https://twitter.com/PythonMaps/status/1653693630367035392/photo/1" target="u_blank">
+                    <img class="img-thumbnail" src="img/peremotra.jfif" width="400" height="400">
+                  </a>
+                  
                 </div>
               </div>
             </div>
@@ -184,12 +187,12 @@
                     "Expectativas"
                     <span class="text-muted"> vamo a ver</span>
                   </h2>
-                  <p class="lead">
+                  <p class="lead" style="text-align: justify">
                     Acá van las expectativas academicas
                   </p>
                 </div>
                 <div class="col-md-5 order-md-1">
-                  <img class="img-thumbnail" src="img/bike.jpg" width="300" height="300">
+                  <img class="img-thumbnail" src="img/bike.jpg" width="400" height="400">
                 </div>
               </div>
             </div>
