--- a/personal.html
+++ b/personal.html
@@ -94,30 +94,33 @@
       <div class="container font-italic">
           <!-- Una pequeña presentacion -->
         <div class="container">
-          <div class="jumbotron p-3 p-md-5 text-dark rounded bg-secondary" style="background-image: url('img/princfondo.JPG'); background-size: cover;">
+          <div class="jumbotron p-3 p-md-5 text-dark rounded bg-secondary" style="background-image: url('img/fondo1.jpg'); background-size: cover;">
             <div class="row featurette">
-              <div class="col-md-7 px-0">
+              <div class="col-md-3 px-0">
+                <img class="img-thumbnail text-center" src="img/personalperf.JPG" width="300" height="300">
+              </div>
+              <div class="col-md-8 order-md-1 mx-auto px-0">
                 <h3 class="display-5 font-italic">
                   <strong>Presentación</strong> 
-                  <span class="text-muted"><strong>inicial</strong></span>
+                  <span class="text-dark"><strong>inicial</strong></span>
                 </h3>
-                <p class="lead" style="text-align: justify">
+                <p class="lead" style="text-align: justify; text-shadow:1px 1px 2px rgba(0,0,0,0.5);">
                   <strong>
-                    Mi nombre es Jorge Andrés Vargas Pérez tengo 25 años, actualmente me encuentro estudiando Ingenieria Topografica en la Universidad del Valle (Cali-Colombia). Soy una persona responsable, respetuoso y con iniciativo, me caracterizo por ser una persona con enfoque, cuando me trazo una meta hago todo lo posible por cumplirla, me gusta asumir retos, con facilidad para trabajar en equipo, me gusta realizar los trabajos que se me asignan de la mejor manera posible, soy una persona que quiere aprender cada día cosas nuevas y afianzar mis conocimientos, con el objetivo de crecer cada día como persona y como profesional.
+                    Mi nombre es Jorge Andrés Vargas Pérez tengo 25 años, actualmente me encuentro estudiando Ingenieria Topografica en la Universidad del Valle (Cali-Colombia). Soy una persona responsable, respetuosa y con iniciativo, me caracterizo por ser una persona con enfoque, cuando me trazo una meta hago todo lo posible por cumplirla, me gusta asumir retos, con facilidad para trabajar en equipo, me gusta realizar los trabajos que se me asignan de la mejor manera posible, soy una persona que quiere aprender cada día cosas nuevas y afianzar mis conocimientos, con el objetivo de crecer cada día como persona y como profesional.
                   </strong>
                 </p>
-              </div>
-              <div class="col-md-4 order-md-1 mx-auto ">
-                <img class="img-thumbnail text-center" src="img/personalperf.JPG" width="300" height="300">
               </div>
             </div>
           </div>
           <br>
           <hr class="featurette-divider">
           <br>
+
+
+          <!-- Tabla -->
           <div class="container">
             <h2>Datos personales</h2>
-            <p>A continuación se presentan mis datos personales que pueden ser de utilidad</p>            
+            <p>En  se presentan mis datos personales que pueden ser de utilidad</p>            
             <table class="table table-bordered table-dark table-striped">
               <thead>
                 <tr>
@@ -173,6 +176,9 @@
               </tbody>
             </table>
           </div>
+
+
+          <!-- Textos -->
           <br>
           <hr class="featurette-divider">
           <br>
@@ -189,18 +195,21 @@
                   <h4 class="font-italic">Estudios primarios</h4>
                   <p style="text-align: justify"> Inicié mis estudios en el año de 2003, en la Institución educativa Tecnico Industrial Gustavo Jimenez sede San José el porvenir en la ciudad de Sogamoso donde cursé mis estudios primarios (Preescolar - Grado quinto).</p>
                   <div class="container">
-                    <img src="img/escuela.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:60%">
+                    <img src="img/escuela.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:70%">
                   </div>
                   <h4> Bachillerato </h4>
                   <p style="text-align: justify">  En el año 2009, a la edad de 11 años inicié el bachillerato en la IETI Gustavo Jimenez sede central, al ser un colegio Tecnico Industrial, es una institucion que tiene enfoques en diferentes talleres que tienen aplicabilidad en la industria como lo son: Dibujo Tecnico, Mecanica Automotriz, Mecanica Industrial, Electricidad, Metalisteria y Soldadura, Fundicion y por ultimo sistemas. Personalmente yo me enfoqué en el area de Sistemas donde aprendí conceptos basicos de lo que son las redes informaticas, manejo de bases de datos, principios de programacion y fue en este taller donde tuve mis primeros acercamientos a AutoCAD. Finalmente, obtuve el titulo de Bachiller Tecnico en Sistemas en Diciembre del año 2014. En general me destaqué academicamente por mi buen rendimiento en las diferentes materias.</p>
                   <div class="container">
-                    <img src="img/escuela.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:60%">
+                    <img src="img/escuela.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:70%">
                   </div>
                   <br>
                   <h4> Tecnologo</h4>
                   <p>  </p>
                   <div class="container">
-                    <img src="img/escuela.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:60%">
+                    <p style="text-align: justify">  En el año 2015 ingresé a estudiar el tecnologo en Topografía en el SENA Centro Minero que se encuentra ubicado en la vereda Morcá del municipio de Sogamoso</p>
+                    <a href="https://www.google.com/maps/@5.7304402,-72.8948728,3a,75y,247.95h,65.54t/data=!3m8!1e1!3m6!1sAF1QipOua3EO4fIZxp37u5-wTxMDGXJva-PHPwXqV_5C!2e10!3e11!6shttps:%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipOua3EO4fIZxp37u5-wTxMDGXJva-PHPwXqV_5C%3Dw203-h100-k-no-pi-0-ya157.47491-ro-0-fo100!7i4096!8i2048" target="u_blank">
+                      <img class="mx-auto d-block rounded" src="img/sena.JPG" style="width:70%">
+                    </a>
                   </div>
                   <br>
                 </div>
@@ -232,7 +241,7 @@
               <!-- Acordion -->
       <div class="container" style="border: 2px solid rgb(100, 97, 97);">   
         <h2>Hobbies y pasatiempos</h2>
-            <p>A continuación se presentan mis hobbies y pasatiempos</p> 
+            <p style="text-align: justify">A lo largo de los años he tenido diferentes hobbies y pasatiempos, entre los cuales algunos aun conservo como lo son escuchar musica, actividades recreativas o hacer entrenamiento anaerobico, A continuación se presentan mis hobbies y pasatiempos principales a los cuales les dedico una mayor cantidad de tiempo:</p> 
         <div class="accordion accordion-flush" id="accordionFlushExample">
           <div class="accordion-item">
             <h2 class="accordion-header">
@@ -248,7 +257,7 @@
                       <span class="text-muted"> Ciclismo </span>
                     </h2>
                     <p class="lead" style="text-align: justify">
-                      Practico el ciclismo de manera recreativa desde el año 2016, inicié con el ciclismo de montaña, un año despues comencé a practicar ciclismo de ruta de manera recreativa, el ciclismo meha ayudado para mantener un estilo de vida saludable, conocer lugares nuevos y personas nuevas, además de que es un medio de transporte economico y util en situaciones de embotellamientos. En la imagen se observa la bicicleta que utilizo para salir a pedalear.
+                      Practico el ciclismo de manera recreativa desde el año 2016, inicié con el ciclismo de montaña, un año despues comencé a practicar ciclismo de ruta de manera recreativa, el ciclismo meha ayudado para mantener un estilo de vida saludable, conocer lugares nuevos y personas nuevas, además de que es un medio de transporte economico y util en situaciones de embotellamientos. En la imagen se observa la bicicleta que utilizo para salir a pedalear. En el video se presenta la bicicleta que utilizo actualmente, es una GIANT TCR Advanced 
                     </p>
                   </div>
                   <div class="col-md-5 order-md-1">
@@ -343,9 +352,9 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/perfil3.jpg" alt="Imagen3" class="mx-auto d-block rounded" style="width:45%">
+                <img src="img/ciclismo.JPG" alt="Imagen3" class="mx-auto d-block rounded" style="width:45%">
                 <div class="carousel-caption text-muted">
-                  <h3>Tercera Imagen</h3>
+                  <h3>Ciclismo</h3>
                   <br>
                 </div>
               </div>
