--- a/principal.html
+++ b/principal.html
@@ -89,7 +89,7 @@
                 <span class="text-muted"> Principal</span>
               </h2>
               <p class="lead" style="text-align: justify">
-                Mi nombre es Jorge Andrés Vargas Pérez tengo 25 años de edad, actualmente soy estudiante de ingenieria topografica, ........ A continuacion encontrará diferentes enlaces a informacion mia. 
+                Mi nombre es Jorge Andrés Vargas Pérez tengo 25 años de edad, actualmente soy estudiante de ingenieria topografica,En el presente sitio web presento y explico algunos aspectos referentes a mi vida como lo son, mi familia, mis estudios, hobbies y expectativas a futuro. A continuacion encontrará diferentes enlaces a la informacion deseada. 
               </p>
 
               
