--- a/academica.html
+++ b/academica.html
@@ -86,42 +86,82 @@
             <div class="container" style="background-image: url('img/fondacademia.JPG'); background-size: cover;">
               <br>
               <img class="mx-auto d-block img-thumbnail" src="img/indexperfil2.JPG" width="300" height="300" >
-              <h2>Informacion Academica</h2>
+              <h2>Información Academica</h2>
               <p class="fw-light"> Acá va otro textico raro referente a la experiencia academica y esas cosas </p>
             </div>
         </section>
         <div class="container">
-          <div class="text-center">
+          <div class="text-center font-italic">
             <hr class="featurette-divider">
-            <h2 class="text-center">Informacion Academica</h2>
-            <p class="fw-light"> Acá va otro textico raro referente a la experiencia academica y esas cosas </p>
+            <h2 class="text-center">Información Academica</h2>
+            <p class="fw-light"> A continuación se presentan los tiempos de cada una de las etapas academicas así como las instituciones en las cuales se realizaron.</p>
           </div>
           <br>
           <!-- Acá van las tarjetas con imagen circular -->
           <div class="container marketing text-center">
             <div class="row">
                 <!-- Columna 1 -->
-                <div class="col-lg-4">
-                  <img class="rounded-circle" src="img/indexperfil2.JPG" width="250" height="250" >
-                  <h2>Heading</h2>
-                  <p style="text-align: justify">
-                    También se pueden especificar otras propiedades CSS para controlar la posición, repetición y tamaño de la imagen de fondo. Por ejemplo
+                <div class="col-lg-3">
+                  <a href="https://ietigustavojimenez.controlacademico.com/" target="u_blank">
+                    <img class="rounded-circle" src="img/gjlogo.jfif" width="250" height="250">
+                  </a>
+                  <h2>Primaria</h2>
+                  <h5>
+                    Institución Educativa Tecnico Industrial Gustavo Jimenez 
+                  </h5>
+                  <p>
+                    Sogamoso - Boyacá
+                  </p>
+                  <p>
+                    2003 - 2008
                   </p>
                 </div>
                 <!-- Columna 2 -->
-                <div class="col-lg-4">
-                  <img class="rounded-circle" src="img/indexperfil2.JPG" width="250" height="250" >
-                  <h2>Heading</h2>
+                <div class="col-lg-3">
+                  <a href="https://ietigustavojimenez.controlacademico.com/" target="u_blank">
+                    <img class="rounded-circle" src="img/gjlogo.jfif" width="250" height="250">
+                  </a>
+                  <h2>Bachillerato</h2>
+                  <h5>
+                    Institución Educativa Tecnico Industrial Gustavo Jimenez 
+                  </h5>
                   <p>
-                    Informacion Personal
+                    Sogamoso - Boyacá
+                  </p>
+                  <p>
+                    2009 - 2014
                   </p>
                 </div>
                 <!-- Columna 3 -->
-                <div class="col-lg-4">
-                  <img class="rounded-circle" src="img/indexperfil2.JPG" width="250" height="250" >
-                  <h2>Heading</h2>
+                <div class="col-lg-3">
+                  <a href="https://centronacionalminero.blogspot.com/" target="u_blank">
+                    <img class="rounded-circle" src="img/senalogo.jpg" width="250" height="250" >
+                  </a>
+                  <h2>Tecnologo</h2>
+                  <h5>
+                    SENA Centro Minero
+                  </h5>
                   <p>
-                    Informacion Personal
+                    Sogamoso - Boyacá
+                  </p>
+                  <p>
+                    2014 - 2016
+                  </p>
+                </div>
+                  <!-- Columna 4 -->
+                <div class="col-lg-3">
+                  <a href="https://www.univalle.edu.co/" target="u_blank">
+                    <img class="rounded-circle" src="img/logo.png" width="250" height="250">
+                  </a>
+                  <h2>Pregrado</h2>
+                  <h5>
+                    Universidad del Valle
+                  </h5>
+                  <p>
+                    Cali - Valle del Cauca
+                  </p>
+                  <p>
+                    2018 - Actualidad
                   </p>
                 </div>
             </div>
@@ -216,37 +256,37 @@
       <!-- Slideshow/carousel -->
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img/caracademia3.JPG" alt="Imagen1" class="mx-auto d-block rounded" style="width:35%">
-                <div class="carousel-caption">
+                <img src="img/caracademia3.JPG" alt="Imagen1" class="mx-auto d-block rounded" style="width:40%">
+                <div class="carousel-caption text-white">
                   <h3>GPS</h3>
                   <br>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/carcademia.JPG" alt="Imagen2" class="mx-auto d-block rounded" style="width:35%">
-                <div class="carousel-caption">
+                <img src="img/caracademias.JPG" alt="Imagen2" class="mx-auto d-block rounded" style="width:40%">
+                <div class="carousel-caption text-white">
                   <h3>Estación total</h3>
                   <br>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/caracademia2.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:35%">
-                <div class="carousel-caption">
+                <img src="img/caracademia2.JPG" alt="Imagen4" class="mx-auto d-block rounded" style="width:40%">
+                <div class="carousel-caption text-white">
                   <h3>Drone</h3>
                   <br>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/caracademia4.JPG" alt="Imagen5" class="mx-auto d-block rounded" style="width:35%">
-                <div class="carousel-caption">
+                <img src="img/caracademia4.JPG" alt="Imagen5" class="mx-auto d-block rounded" style="width:40%">
+                <div class="carousel-caption text-white">
                   <h3>Prisma</h3>
                   <br>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img/caracademia6.JPG" alt="Imagen3" class="mx-auto d-block rounded" style="width:35%">
-                <div class="carousel-caption">
-                  <h3>quinta</h3>
+                <img src="img/caracademia6.JPG" alt="Imagen3" class="mx-auto d-block rounded" style="width:40%">
+                <div class="carousel-caption text-white">
+                  <h3>Estacion</h3>
                   <br>
                 </div>
               </div>
