Actualizar expectativas.html

--- a/expectativas.html
+++ b/expectativas.html
@@ -110,7 +110,7 @@
                     <span class="text-muted"> vamo a ver</span>
                   </h2>
                   <p class="lead" style="text-align: justify">
-                    Acá van las expectativas academicas
+                    Considerando los conocimientos que he adquirido durante mi desarrollo academico y las necesidades actuales del pais, considero que es necesario adquirir tantos conocimientos como sea posible para así lograr impactar sobre las comunidades, por lo cual, una vez terminada la carrera profesional que me encuentro cursando en este momento, tengo planeado estudiar la Especialización en Geomatica ya que complementa los conocimientos. 
                   </p>
                 </div>
                 <div class="col-md-5 order-md-1">
